...
            >

        </androidx.appcompat.widget.SearchView>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/exhibit_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:text="@string/default_exhibit_count"
...

    <Button
        android:id="@+id/plan_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="plan"
        android:onClick="onPlanBtnClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
